<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meal Shuttle</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>

    <!-- Snackbar -->
    <string name="snackbar_backbutton_pressed_content">Press "Back" once more to close the app</string>

    <!-- List item -->
    <string name="item_content_carbohydrate">Carbohydrate</string>
    <string name="item_content_protein">Protein</string>
    <string name="item_content_fat">Fat</string>
    <string name="item_content_kcal">Kcal</string>

    <!-- Dialog -->
    <string name="dialog_search">Searching&#8230; (%1$d/%2$d)</string>
    <string name="dialog_school_set">Would you like this result to choose?</string>
    <string name="dialog_not_initalized_content">The school does not set, you can not use the app. Go to the settings screen</string>
    <string name="dialog_change_date">Change date</string>
    <string name="dialog_reset_content">Reset settings. right?</string>

    <!-- Activity title -->
    <string name="activity_main_title">%1$s %2$dth (%3$s)</string>
    <string name="activity_search_title">Search school</string>
    <string name="activity_search_result_title">Search for \"%1s\"</string>

    <!-- Button -->
    <string name="button_prev_text">Prev</string>
    <string name="button_next_text">Next</string>
    <string name="button_date_select_text">Select date</string>
    <string name="button_today_text">Today</string>

    <!-- Notification -->
    <string name="notification_meal_fetch_title">Download meal information</string>
    <string name="notification_meal_fetch_content">Downloading&#8230; (%1$d/%2$d)</string>
    <string name="notification_meal_fetch_warning_title">Can\'t download meal data</string>
    <string name="notification_meal_fetch_warning_content">Not connected, check network</string>

    <!-- Action -->
    <string name="action_settings">Settings</string>
    <string name="action_breakfast">Breakfast</string>
    <string name="action_lunch">Lunch</string>
    <string name="action_dinner">Dinner</string>
    <string name="action_information">Info</string>
    <string name="action_search">Search</string>
    <string name="action_send_suggest">Send suggest</string>
    <string name="action_share">Share</string>

    <!-- Preference -->
    <string name="pref_application_info">App Info</string>
    <string name="pref_application_version_label">Version</string>
    <string name="pref_school_settings_label">Set School</string>
    <string name="pref_time_based_menu_change">Time based Menu Changed</string>
    <string name="pref_time_based_menu_change_enabled_summary">Enable</string>
    <string name="pref_time_based_menu_change_disable_summary">Disable</string>
    <string name="pref_lab_category">Experimental Features</string>
    <string name="pref_time_based_show_info">Every time to set the start time is displayed is changed,</string>
    <string name="pref_time_summary">{date}</string>
    <string name="pref_time_format">hh:mm a</string>
    <string name="pref_breakfast_started_time">Breakfast started time</string>
    <string name="pref_lunch_started_time">Lunch started time</string>
    <string name="pref_dinner_started_time">Dinner started time</string>
    <string name="pref_breakfast_enable">Enable breakfast</string>
    <string name="pref_default_menu">Default menu</string>
    <string name="pref_reset">Reset</string>
    <string name="pref_remove_ads">Remove ads (%1$s)</string>
    <string name="pref_remove_ads_already_summary">Already purchased</string>
    <string name="pref_remove_ads_not_summary">Not purchased</string>

    <!-- Preference key -->
    <string name="pref_reset_key" translatable="false">pref_reset_key</string>
    <string name="pref_application_version_key" translatable="false">pref_application_version_key</string>
    <string name="pref_time_based_menu_change_key" translatable="false">pref_time_based_menu_change_key</string>
    <string name="pref_time_breakfast_key" translatable="false">pref_time_breakfast_key</string>
    <string name="pref_time_lunch_key" translatable="false">pref_time_lunch_key</string>
    <string name="pref_time_dinner_key" translatable="false">pref_time_dinner_key</string>
    <string name="pref_breakfast_enable_key" translatable="false">pref_breakfast_enable_key</string>
    <string name="pref_school_settings_key" translatable="false">pref_school_settings_key</string>
    <string name="pref_default_menu_key" translatable="false">pref_default_menu_key</string>
    <string name="pref_remove_ads_key" translatable="false">pref_remove_ads_key</string>

    <!-- Ads -->
    <string name="ad_unit_id" translatable="false">ca-app-pub-8374626872967470/9770310147</string>

    <!-- Toast -->
    <string name="toast_cannot_save_time">Can\'t saved selected time</string>

    <!-- Etc -->
    <string name="shared_raw_not_content">No meal\n\n#Shared \'Meal Shuttle\'</string>
    <string name="shared_raw_content">\n#Shared \'Meal Shuttle\'</string>
    <string name="no_results">No results</string>
    <string name="search_hint">Search School</string>
    <string name="not_connected">Not connected internet</string>
</resources>
