<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="@string/pref_reset_key"
        android:title="@string/pref_reset" />
    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/pref_default_menu"
        android:entries="@array/default_menu_array"
        android:entryValues="@array/default_menu_array_values"
        android:key="@string/pref_default_menu_key"
        android:title="@string/pref_default_menu" />
    <PreferenceCategory android:title="@string/pref_lab_category" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_time_based_menu_change_key"
        android:summaryOff="@string/pref_time_based_menu_change_disable_summary"
        android:summaryOn="@string/pref_time_based_menu_change_enabled_summary"
        android:title="@string/pref_time_based_menu_change" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_breakfast_enable_key"
        android:title="@string/pref_breakfast_enable" />
    <com.earlier.yma.ui.preference.TimePickerPreference
        android:dependency="@string/pref_breakfast_enable_key"
        android:key="@string/pref_time_breakfast_key"
        android:title="@string/pref_breakfast_started_time"
        app:defaultHour="6"
        app:defaultMinute="0"
        app:summaryFormat="@string/pref_time_summary"
        app:summaryTimeFormat="@string/pref_time_format" />
    <com.earlier.yma.ui.preference.TimePickerPreference
        android:key="@string/pref_time_lunch_key"
        android:title="@string/pref_lunch_started_time"
        app:defaultHour="10"
        app:defaultMinute="0"
        app:summaryFormat="@string/pref_time_summary"
        app:summaryTimeFormat="@string/pref_time_format" />
    <com.earlier.yma.ui.preference.TimePickerPreference
        android:key="@string/pref_time_dinner_key"
        android:title="@string/pref_dinner_started_time"
        app:defaultHour="14"
        app:defaultMinute="0"
        app:summaryFormat="@string/pref_time_summary"
        app:summaryTimeFormat="@string/pref_time_format" />
    <Preference android:summary="@string/pref_time_based_show_info" />
</PreferenceScreen>